@@ -347,7 +347,7 @@ namespace libtorrent
 			ios = m_io_service.get();
 		}
 
-		m_impl = boost::make_shared<session_impl>(boost::ref(*ios));
+		m_impl = boost::make_shared<session_impl>(boost::ref(*ios), boost::ref(pack));
 		*static_cast<session_handle*>(this) = session_handle(m_impl.get());
 
 #ifndef TORRENT_DISABLE_EXTENSIONS
@@ -361,7 +361,7 @@ namespace libtorrent
 		TORRENT_UNUSED(flags);
 #endif
 
-		m_impl->start_session(pack);
+		m_impl->start_session();
 
 		if (internal_executor)
 		{
